--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,7 +31,7 @@ header {
 }
 
 .logo {
-  font-size: 36px;
+  font-size: 2.25rem;
   font-weight: black;
   color: #334155;
 }
@@ -44,12 +44,12 @@ header {
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 90px;
+  gap: 5.625rem;
 }
 
 .login-button {
-  height: 44px;
-  width: 160px;
+  height: 2.75rem;
+  width: 10rem;
   background-color: #5481e7;
   color: #fff;
 
@@ -59,13 +59,13 @@ header {
   align-items: center;
   justify-content: center;
 
-  font-size: 20px;
+  font-size: 1.25rem;
   font-weight: black;
 }
 
 .hero-wrapper {
   width: 100%;
-  height: calc(100vh - 78px);
+  height: calc(100vh - 4.875rem);
 
   display: flex;
   justify-content: center;
@@ -81,13 +81,13 @@ header {
 
   display: flex;
   justify-content: center;
-  margin-top: 80px;
+  margin-top: 5rem;
 }
 
 .title {
-  font-size: 64px;
+  font-size: 4rem;
   font-weight: black;
   text-align: center;
   width: 100%;
-  max-width: 793px;
+  max-width: 49.5625rem;
 }
