--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -73,6 +73,7 @@ header {
   background-image: url(../images/bg.png);
   background-repeat: no-repeat;
   background-position: center;
+  background-size: contain;
 }
 
 .hero-container {
